--- a/first-steps/index.html
+++ b/first-steps/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>First form!</h1>
+    <h1>Comment Box.</h1>
     <form action="/my-form-handling-page" method="post">
         <ul>
             <li>
@@ -23,9 +23,9 @@
                 <label for="msg">Message:</label>
                 <textarea name="user_message" id="msg" cols="30" rows="10">Please enter a comment.</textarea>
             </li>
-            <li>
+            <li class="button">
                 <button type="reset">Reset!</button>
-                <button type="submit">Submit!</button>
+                <button type="submit">Add Comment.</button>
             </li>
         </ul>
     </form>
