Add more conditions options.

--- a/fieldset/index.html
+++ b/fieldset/index.html
@@ -98,11 +98,25 @@
                 <legend>Conditions</legend>
 
                 <label for="heartpalps">Heart Palpitations</label>
-                <input type="checkbox" name="patient-heart-p" id="heartpalps">
+                <input type="checkbox" name="condition-heart-p" id="heartpalps">
 
                 <label for="anemia">Anemia</label>
-                <input type="checkbox" name="patient-anemia" id="anemia">
+                <input type="checkbox" name="condition-anemia" id="anemia">
 
+                <label for="headaches">Headaches</label>
+                <input type="checkbox" name="condition-headache" id="headaches">
+
+                <label for="diarrhea">Diarrhea</label>
+                <input type="checkbox" name="condition-diarrhea" id="diarrhea">
+
+                <label for="pinkeye">Pink Eye</label>
+                <input type="checkbox" name="condition-pinkeye" id="pinkeye">
+
+                <label for="mono">Mononucleosis</label>
+                <input type="checkbox" name="condition-mono" id="mono">
+
+                <label for="sache">Stomach Ache</label>
+                <input type="checkbox" name="condition-sache" id="sache">
                 
             </fieldset>
 
