Add intial css styling

--- a/fieldset/index.html
+++ b/fieldset/index.html
@@ -8,15 +8,15 @@
     <title>Playing with Fieldsets</title>
 </head>
 <body>
-    <h1>Medical Intake Survey.</h1>
-    <form action="/fieldset-database" method="post">
+    <h1 class="title">Medical Intake Survey.</h1>
+    <form class="medform" action="/fieldset-database" method="post">
         <p>
             Required fields are followed by
             <strong><span aria-label="required">*</span></strong>
         </p>
         <section class="info">
             <h2>Patient Information</h2>
-            <div>
+            <div class="row1">
                 <label for="lastname">Last Name:</label>
                 <input type="text" name="patient-last-name" id="lastname">
     
